--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^18.14.1",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "husky": "^8.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
@@ -23,8 +24,7 @@
         "eject": "react-scripts eject",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
-        "lint:format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-        "prepare": "husky install"
+        "lint:format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
     },
     "eslintConfig": {
         "extends": [
@@ -54,11 +54,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-react": "^7.32.2",
-        "husky": ">=6",
         "lint-staged": ">=10",
         "prettier": "^2.8.4"
-    },
-    "lint-staged": {
-        "*.js": "eslint --cache --fix"
     }
 }
