--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "postinstall": "husky install"
     },
     "lint-staged": {
-        "**/*.{js,jsx,tsx,ts,less,md,json}": "npm run lint"
+        "**/*.{js,jsx,tsx,ts,less,md,json}": "yarn lint"
     },
     "eslintConfig": {
         "extends": [
