--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "no-unused-vars": ["warn", { "vars": "all" }]
+    // "no-unused-vars": ["error", { "vars": "all" }]
+    // "max-len": ["WARNING", 100, 2],
+    "no-console": ["warn", {"allow": ["warn", "error"]}]
   }
 }
